# touchscreen

./: .gitignore  README.md  pyproject.toml
src/touchscreen/: __init__.py  commands.py  logger.py  main.py
touch_ui/: commands.py  logger.py  main.py  touch_ui.service
