[project]
name = "touchscreen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy>=2.3.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.0",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
